# TatarBy

./: docker-compose.yml
hahaton/: Dockerfile  app.vue  package-lock.json
hahaton/pages/auth/: auth.vue  login.vue  registration.vue
hahaton/pages/into/: ask.vue
llm-back/: Dockerfile  main.py  requirements.txt
nginx/: default.conf  nginx.conf
pol-back/: Cargo.toml  Dockerfile  docker-compose.yml
pol-back/src/: config.rs  handler.rs  jwt_auth.rs  main.rs  token.rs
sd-back/: Dockerfile  main.py  requirements.txt
user-back/: .env  Dockerfile  export-docker-compose.yml
user-back/.sqlx/: query-82feadd8402203d4a7ee1d87bce18d0ed53cc718211e1ab04fc1a005c3810c8d.json
user-back/src/: config.rs  handler.rs  jwt_auth.rs  main.rs  response.rs  token.rs
